Fix z-index of asset-detail so its below modal (#173)

--- a/angular/src/app/components/asset-detail/asset-detail.component.styl
+++ b/angular/src/app/components/asset-detail/asset-detail.component.styl
@@ -11,7 +11,7 @@
       align-items center
       padding 5px
   position fixed
-  z-index 5000
+  z-index 900
   width 35%
   min-width 250px
   max-width 400px
